outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval-8217314137033824111_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores (calculated via degree centrality and betweenness centrality) and a probabilistic selection mechanism that balances exploitation (short-term gains) and exploration (long-term potential), with weights that adapt to both progress and node significance.}
                                                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores (calculated via degree centrality and betweenness centrality) and a probabilistic selection mechanism that balances exploitation (short-term gains) and exploration (long-term potential), with weights that adapt to both progress and node significance.}
                                                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'
